# latexocr-server

./: README.md  dockerfile  main.py  pyproject.toml  requirements.txt
